# auctionfest-backend

./: .dockerignore  .gitignore  Dockerfile  PLANOMIC PLOT DETAILS (2).csv  README.md  database.py  detect_contours_v2.py  load_test.py  main.py  models.py  plot_data_v2 copy.json  plot_data_v2.json  pyproject.toml  seed.py  socket_manager.py  sort_plots.py  start.sh  test_bidding_scenario.py  visualize_plots.py
routers/: __init__.py  admin.py  auth.py  data.py  rebid.py
tests/: conftest.py  test_api.py
